--- a/portfolio/css/stylish-portfolio.css
+++ b/portfolio/css/stylish-portfolio.css
@@ -213,7 +213,7 @@ h6 {
 
 .callout {
   padding: 15rem 0;
-  background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("../img/povert2.jpg");
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("../img/povert2-dark.png");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
